--- a/client/src/pages/login/Login.css
+++ b/client/src/pages/login/Login.css
@@ -1,5 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .login-container {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -7,15 +13,26 @@
     align-items: center;
     background-color: #f0f2f5;
 }
+.login-container img {
+    width: 150px;
+    margin-bottom: 20px;
+    position: relative;
+}
 .login-form {
     background-color: #ffffff;
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.login-form-container{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
 }
 .login-form-input-container{
     display: flex;
@@ -24,11 +41,12 @@
 }
 .login-form-input-container img{
     width: 20px;
-    height: 20px;
+    height: 35px;
 }
 .login-form-input-container input{
     flex: 1;
     padding: 10px;
+    height: 45px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
@@ -45,6 +63,15 @@
 }
 .login-form button:hover {
     background-color: #45a049;
+}
+.forgotpassword {
+    text-align: right;
+    font-size: 14px;
+    color: #007BFF;
+}
+.forgotpassword:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 .login-form-toggle {
     margin-top: 15px;
