--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -6,6 +6,10 @@
     background-color: #f8f9fa;
     position: relative;
 }
+.logo{
+    width: 100px;
+    height: 50px;
+}
 .navbar-container-btn{
     padding: 8px 16px;
     background-color: #007bff;
